update naee cate prod

--- a/testnhanh.html
+++ b/testnhanh.html
@@ -7,14 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <h2>
-      test
-      <h3>
-        test
-        <head>
-          test
-        </head>
-      </h3>
-    </h2>
+    <label for="avt">Chon anh</label>
+    <input class="m-4 bg-danger" id="avt" type="file" />
   </body>
 </html>
